# crime-analyst-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  crime_analyst_ai.py  pyproject.toml  requirements.txt  run.py  sample_crime_data.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: sample_crime_data.csv
media/: mediaplaceholder.txt
src/crime_analyst_ai/: __init__.py  app.py  core.py
